--- a/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
+++ b/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aocl" Version="1.4.0" />
     <PackageReference Include="Marten" Version="3.13.3" />
   </ItemGroup>
 
