--- a/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
+++ b/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aocl" Version="1.4.0" />
-    <PackageReference Include="Marten" Version="3.13.3" />
+    <PackageReference Include="Marten" Version="4.0.0-alpha.8" />
   </ItemGroup>
 
 </Project>
