--- a/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
+++ b/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Aocl" Version="1.4.0" />
     <PackageReference Include="Marten" Version="4.0.0-alpha.8" />
+    <PackageReference Include="OpenFTTH.CQRS" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
