--- a/OpenFTTH.EventSourcing.Tests/OpenFTTH.EventSourcing.Tests.csproj
+++ b/OpenFTTH.EventSourcing.Tests/OpenFTTH.EventSourcing.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="FluentResults" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
