--- a/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
+++ b/OpenFTTH.EventSourcing/OpenFTTH.EventSourcing.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Aocl" Version="1.4.0" />
     <PackageReference Include="FluentResults" Version="2.3.0" />
-    <PackageReference Include="Marten" Version="4.0.0-alpha.8" />
+    <PackageReference Include="Marten" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
